fw/core/ddi/tbor/api/tests/compile_tests/fail/tuple_struct.stderr
error: #[tbor] structs must have named fields or be a unit struct
 --> tests/compile_tests/fail/tuple_struct.rs:7:20
  |
7 | pub struct TupleReq(u8, u16);
  |                    ^^^^^^^^^
